--- a/css/style.css
+++ b/css/style.css
@@ -80,6 +80,8 @@ color: #626262;
 
 margin-top: 44px;
 
+color: #626262;
+
 margin-bottom: 65px;
 
 font-size: 18px;
@@ -135,4 +137,58 @@ font-size: 18px;
 font-weight: 100;
 
 color: #626262;
+}
+.SignUp
+{
+    height: 300px;
+    background-color: #f0f0f0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 80px;
+}
+.signup_contents
+{
+    
+    width: 331px;
+}
+.signup_contents h1
+{
+    font-size: 31px;
+    font-weight: 100;
+    color: #626262;
+    width: 335px;
+    margin-bottom: 80px;
+}
+.signup_contents input
+{
+
+width: 100%;
+
+border: none;
+
+border-bottom: 1px solid;
+
+background:none;
+}
+.signup_contents input:focus
+{
+    outline: none;
+}
+.button
+{
+    height: 300px;
+    display: flex;
+    justify-content: center;
+    align-items: center;}
+.button button
+{
+
+padding: 15px 36px;
+
+background: transparent;
+
+border: none;
+
+border: 1px solid #000;
 }
