--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,4 @@
+/* font-family: "Playfair Display", serif; */
 *{ 
     margin: 0px;
 
@@ -21,6 +22,7 @@ header
 .Menu ul
 {
     list-style: none;float: right;overflow: hidden;
+    font-family: "Playfair Display", serif;
 }
 .Menu ul li 
 {
@@ -63,7 +65,7 @@ width: 80%;
 }
 .photodiary h1
 {
-
+    font-family: "Playfair Display", serif;
 font-size: 30px;
 
 text-transform: capitalize;
@@ -79,7 +81,7 @@ color: #626262;
 {
 
 margin-top: 44px;
-
+font-family: "Playfair Display", serif;
 color: #626262;
 
 margin-bottom: 65px;
@@ -96,6 +98,7 @@ font-weight: 100;
 
 .Lifestyle
 {
+    font-family: "Playfair Display", serif;
     width: 80%;
     margin: auto;
     display: flex;
@@ -146,6 +149,7 @@ color: #626262;
     justify-content: center;
     align-items: center;
     margin-bottom: 80px;
+    font-family: "Playfair Display", serif;
 }
 .signup_contents
 {
@@ -154,7 +158,7 @@ color: #626262;
 }
 .signup_contents h1
 {
-    font-size: 31px;
+    font-size: 28px;
     font-weight: 100;
     color: #626262;
     width: 335px;
@@ -199,6 +203,7 @@ footer
     background-color: #f0f0f0;
     height: 150px;
     margin: 0px;
+    font-family: "Playfair Display", serif;
 }
 .footerwraper
 {
@@ -214,7 +219,7 @@ display: flex;
 justify-content: space-between;
 }
 .Terms
-{width: 20%;}
+{width: 30%;}
 .Terms ul
 {
 
@@ -235,6 +240,8 @@ text-decoration: none;
 text-decoration: none;
 
 color: black;
+
+font-size: 18px;
 }
 .Icons
 {
